# DemonEdge

./: CMakeLists.txt  get-proto.sh
CMake/Modules/: FindSnappy.cmake
example/: first.cpp
src/demonedge/: callback.cpp  callback.hpp  datatables.hpp  delegate.hpp  dem.cpp  dem.hpp  reader.cpp  reader.hpp  stringtables.cpp  stringtables.hpp
